hphp/hack/test/typecheck/expression_trees/nullsafe_instance_method_feature.php.exp
ERROR: File "nullsafe_instance_method_feature.php", line 7, characters 12-19:
Cannot use unstable feature: `expression_tree_nullsafe_obj_get` (Parsing[1002])
ERROR: File "nullsafe_instance_method_feature.php", line 11, characters 12-19:
Cannot use unstable feature: `expression_tree_nullsafe_obj_get` (Parsing[1002])
